[package]
name = "resp"
version = "0.1.0"
authors = ["Qing Yan <admin@zensh.com>"]
description = "RESP(REdis Serialization Protocol) Serialization for Rust."
documentation = "https://github.com/iorust/resp"
homepage = "https://github.com/iorust/resp"
repository = "https://github.com/iorust/resp.git"
readme = "README.md"
keywords = ["redis", "resp", "serde", "serialization"]
license = "MIT/Apache-2.0"

[dependencies]
