[package]
name = "resp"
version = "0.3.6"
authors = ["Qing Yan <admin@zensh.com>"]
description = "RESP(REdis Serialization Protocol) Serialization for Rust."
documentation = "https://iorust.github.io/resp/resp"
homepage = "https://github.com/iorust/resp"
repository = "https://github.com/iorust/resp.git"
readme = "README.md"
keywords = ["redis", "resp", "serde", "serialization"]
license = "MIT/Apache-2.0"
