[package]
name = "resp"
version = "1.0.0"
authors = ["Qing Yan <admin@zensh.com>"]
description = "RESP(REdis Serialization Protocol) Serialization for Rust."
documentation = "https://iorust.github.io/resp/resp"
homepage = "https://github.com/iorust/resp"
repository = "https://github.com/iorust/resp.git"
readme = "README.md"
keywords = ["redis", "resp", "serialization"]
license = "MIT/Apache-2.0"

[dev-dependencies]
rand = "0.3"